Some new modifications

--- a/Rapport/papier1/christophe.bib
+++ b/Rapport/papier1/christophe.bib
@@ -72,12 +72,18 @@ url = {http://ieeexplore.ieee.org/xpl/freeabs\_all.jsp?arnumber=5474737},
 year = {2010}
 }
 
-
-
 @phdthesis{Acher2011,
 author = {Acher, Mathieu},
 booktitle = {Sophia},
 school = {Universit\'{e} Nice Sophia-Antipolis},
 title = {{Managing Multiple Feature Models : Foundations , Language and Applications}},
 year = {2011}
+}
+
+@article{Report1990,
+author = {Report, Technical and Kang, Kyo C and Cohen, Sholom G and Hess, James A and Novak, William E and Peterson, A Spencer},
+journal = {Distribution},
+number = {November},
+title = {{Feature-Oriented Domain Analysis (FODA) Feasibility Study}},
+year = {1990}
 }
